force-app/main/default/objects/Demo_Integration_Procedure_Response__e/fields/output0__c.field-meta.xml
<CustomField>
    <fullName>output0__c</fullName>
    <label>output0</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>