force-app/main/default/objects/Demo_Integration_Procedure_Response__e/fields/output1__c.field-meta.xml
<CustomField>
    <fullName>output1__c</fullName>
    <label>output1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>