force-app/main/default/objects/Demo_Integration_Procedure_Response__e/fields/output2__c.field-meta.xml
<CustomField>
    <fullName>output2__c</fullName>
    <label>output2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>